Fix the extra white-space to the right side of widget menu on IE7, which was introduced after fixing {bz: 1957}.
And I am so glad that the IE7 specific CSS rules are all removed, we should
remove it from template until we need it again.

--- a/nlw/share/skin/s3/css/screen.ie7.css
+++ b/nlw/share/skin/s3/css/screen.ie7.css
@@ -1,5 +1,2 @@
-#st-page-editing-toolbar {
-    display:inline-block;
-    float:none;
-}
+/* no IE7-specific css is required for now */
 
